# xnat-download

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
test/: test.py
xnat_downloader/: __main__.py
xnat_downloader/src/: assessor.py  assessor_resource.py  project.py  request.py  scan.py  scan_resources.py  session.py  session_resource.py  subject.py  variables.py  xnat_session.py
